@@ -109,10 +109,12 @@
 /* Check for SPM Control Register in processor. */
 #if defined (SPMCSR)
 #  define __SPM_REG    SPMCSR
-#elif defined (SPMCR)
-#  define __SPM_REG    SPMCR
 #else
-#  error AVR processor does not provide bootloader support!
+#  if defined (SPMCR)
+#    define __SPM_REG    SPMCR
+#  else
+#    error AVR processor does not provide bootloader support!
+#  endif
 #endif
 
 
